--- a/CompositionRoot/CompositionRoot.csproj
+++ b/CompositionRoot/CompositionRoot.csproj
@@ -18,6 +18,6 @@
 
 
   <ItemGroup>
-    <ProjectReference Include="..\Engine\Gunslinger.csproj" />
+    <ProjectReference Include="..\Gunslinger\Gunslinger.csproj" />
   </ItemGroup>
 </Project>
