--- a/Gunslinger.Console/Gunslinger.Console.csproj
+++ b/Gunslinger.Console/Gunslinger.Console.csproj
@@ -16,7 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CompositionRoot\CompositionRoot.csproj" />
-    <ProjectReference Include="..\Engine\Gunslinger.csproj" />
+    <ProjectReference Include="..\Gunslinger\Gunslinger.csproj" />
   </ItemGroup>
 
   <ItemGroup>
