--- a/Engine/Gunslinger.csproj
+++ b/Engine/Gunslinger.csproj
@@ -2,7 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="DataProviders\SQLHelpers\**" />
+    <EmbeddedResource Remove="DataProviders\SQLHelpers\**" />
+    <None Remove="DataProviders\SQLHelpers\**" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Common" Version="1.0.2" />
@@ -11,7 +18,9 @@
     <PackageReference Include="Microsoft.SqlServer.SqlManagementObjects" Version="150.18131.0" />
     <PackageReference Include="Pluralize.NET.Core" Version="1.0.0" />
     <PackageReference Include="Stubble.Core" Version="1.3.4" />
+    <PackageReference Include="System.Collections" Version="4.3.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.6.1" />
+    <PackageReference Include="System.Runtime" Version="4.3.1" />
     <PackageReference Include="ValueInjecter" Version="3.1.3" />
   </ItemGroup>
 
